# libresample

./: .gitignore  .travis.yml  AUTHORS  ChangeLog  Makefile.am  Makefile.in  bootstrap  configure  configure.ac  libresample.pc.in  libtool
include/: libresample.h
pkgconfig/: libresample.pc
src/: filterkit.c  filterkit.h  resample.c  resample_defs.h  resamplesubs.c
win/: UpgradeLog.htm  libresample.sln  libresample.vcxproj  libresample.vcxproj.filters
